tests/requests/invalid/003.py
from gunicorn.ghttp.errors import InvalidRequestMethod
request = InvalidRequestMethod